2007-01-28  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutCanvas.java:
		removed needless import

	* src/de/intevation/printlayout/LayoutFrame.java:
		- removed svgCanvas instance variable
		- move creation of SVG sheet to PaperSizes

	* src/de/intevation/printlayout/PaperSizes.java:
		readded SVGDocument paper sheet creation here.

2007-01-28  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/PaperSizes.java:
		load paper sizes from paper-sizes.properties instead
		of beeing hard coded in this class

	* src/de/intevation/printlayout/resources/paper-sizes.properties:
		added. list of paper sizes

	* src/de/intevation/printlayout/resources/a4.svg:
		removed. no need for A4 fallback any longer

	* src/de/intevation/printlayout/LayoutFrame.java:
		- don't uses the A4 fallback any longer.
		- enable menu entry to add scale bar only if selected
		  object is a map.

2007-01-26  Sascha L. Teichmann  <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		remove call to LayoutCanvas.installSVGDocument()

	* src/de/intevation/printlayout/InfoDialog.java:
		Change frame title from "test" to "Print/Layout v0.8"

	* src/de/intevation/printlayout/LayoutCanvas.java:
		remove needless installSVGDocument()

	* src/de/intevation/printlayout/LayoutFrame.java:
		switch some calls to workaround some wrong(?) inner 
		side effects inside Batik with JSVGScrollPane vs. JSVGCanvas

	* src/de/intevation/printlayout/PaperSizes.java:
		uses Template
		
	* src/de/intevation/printlayout/Template.java:
		Smarter template replacer

	* src/de/intevation/printlayout/resources/paper-tmpl.svg:
		smarter template

2007-01-26  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* src/de/intevation/printlayout/LayoutFrame.java:
		workaround: SVGMatrix.getA() throws NullPointerException.
		We catch this exception.

2007-01-26  Ludwig Reiter  <ludwig.reiter@intevation.de>
